@@ -6,5 +6,5 @@ test_monitor_SOURCES=test_monitor.c
 
 AM_CFLAGS=-Wall -Werror $(X_CFLAGS) -I$(top_srcdir) $(GLIB_CFLAGS)
 
-AM_LDFLAGS=$(top_builddir)/libxklavier/libxklavier.la $(X_LIBS) -lX11 $(GLIB_LIBS)
+LDADD=$(top_builddir)/libxklavier/libxklavier.la $(X_LIBS) -lX11 $(GLIB_LIBS)
 
